                     methods and associated tests.
17-Mar-2019  - V0.27 Return HTTP response codes in UrlRequestUtil() methods.
24-Mar-2019  - V0.28 Suppress error message on missing validation report file.
25-Mar-2019  - V0.29 Expose comment processing for csv/tdd files as keyword argument
 2-Apr-2019  - V0.30 Add comment option and compression handling to __deserializeList()
19-Jun-2019  - V0.31 Address linting issues and and adjustments for multi-type return values.
11-Jul-2019  - V0.32 add explicit py2 safe file decompression to avoid encoding problems
25-Jul-2019  - V0.33 Try to improve retention of ordering for json load
 9-Aug-2019  - V0.34 Added retry for all url or service requests
10-Aug-2019  - V0.35 Incorporate ElementTree parser for XML deserializer
11-Aug-2019  - V0.36 Migrate compress/uncompreess and toAscii methods
                     from IoUtil to FileUtil. In FileUtil, add __extractZipMember() method.
                     Add retry support for __fetchUrlx(). Replace urlibx version of __fetchUrlx
                     with a version that depends on  requests module to better support
                     redirection and authentication.  Add further unit tests for FileUtil.
12-Aug-2019  - V0.37 Add modules CryptUtils and testCryptUtils.
13-Aug-2019  - V0.38 Add support for multipart serialization/deserialization
14-Aug-2019  - V0.39 Add methods for making working directories
29-Aug-2019  - V0.40 Fix py27 compatibility issues
 4-Sep-2019  - V0.41 Add common json numpy type encodings
18-Sep-2019  - V0.42 Add IoUtil() method deserializeCsvIter()
18-Sep-2019  - V0.43 remove return in the generator method for Py27
18-Sep-2019  - V0.44 Adjust testing timeout.
 7-Oct-2019  - V0.45 Adjust error handling in FileUtil()
27-Oct-2019  - V0.46 Add multiprocessor timeout decorator
29-Oct-2019  - V0.47 Add signal timeout decorator
20-Nov-2019  - V0.48 Add support for user supplied alternative delimiters, upgrade to py38