@@ -30,6 +30,7 @@ coverage_cutoff = 65
 #           8-Jul-2019 jdw Disable flake8 plugin (pydocstyle compat issue)
 #          12-Jul-2019 jdw Add placeholders for up to four test paths
 #          13-Jul-2019 jdw Add coverage exclusion
+#          21-Nov-2019 jdw py27->py38 update black version
 ##
 [tox]
 # The complete list of supported test environments to setup and invoke
